# claude-profiles

./: Cargo.toml  LICENSE  Makefile  README.md  config.example.toml  install.sh
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-18-clp-cli-rework.md
docs/superpowers/specs/: 2026-03-18-clp-cli-rework-design.md
src/: aws.rs  claude.rs  commands.rs  config.rs  main.rs  session.rs  update.rs
