[package]
name = "claude-profiles"
version = "0.2.1"
edition = "2024"

[[bin]]
name = "clp"
path = "src/main.rs"

[dependencies]
# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts = "1"
aws-sdk-sso = "1"
aws-sdk-ssooidc = "1"

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"

# Utils
dirs = "5"
anyhow = "1"
thiserror = "2"
